Refactor InventoryTests and InventoryPage with enhanced test coverage and documentation, also modified allure plugin's version. Deleted some unnecessary files.